# tauri-creator

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
base/: .gitignore  README.md  index.html  package.json  vite.config.ts
base/src/: App.css  App.test.tsx  App.tsx  AppContent.tsx  main.tsx
base/src-tauri/: Cargo.toml  tauri.conf.json
base/src-tauri/src/: lib.rs  main.rs
docs/: QUALITY_GATE.md
docs/features/: index.md
docs/recipes/: index.md
features/app-lifecycle/: cargo-dependencies.json  feature.json  markers.json
features/app-state/: feature.json  markers.json
features/command-palette/: feature.json  markers.json
features/custom-titlebar/: feature.json  markers.json
features/diagnostics/: feature.json  markers.json
features/dx-tools/: feature.json
features/i18n/: cargo-dependencies.json  feature.json  markers.json
features/logging/: cargo-dependencies.json  feature.json  markers.json
features/native-menu/: feature.json  markers.json
features/sqlite/: feature.json  (+2 more)
recipes/: desktop.json  essential.json  full.json  minimal.json  production.json  starter.json
scripts/: apply-feature.js  check-manifests.js  create-app.js  generate-docs.js  package-managers.js  project-map.js  prompts.js  remove-feature.js  specta-bindings.js  template-renderer.js  test-apply-feature.js  test-branding.js  test-check-manifests.js  test-create-app.js  test-generate-docs.js  test-generated-output-boundary.js  test-prompts.js  test-remove-feature.js  test-scaffold.js  test-verify-generated-app.js  verify-generated-app.js
(+99 files in other folders)
