[package]
name = "{{CARGO_NAME}}"
version = "0.1.0"
description = "{{APP_PRODUCT_NAME}}"
authors = ["{{APP_AUTHOR}}"]
{{CARGO_LICENSE_LINE}}
edition = "2021"
rust-version = "1.82"

[lib]
name = "{{CARGO_CRATE_NAME}}_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Keep Tauri's cookie 0.18.x dependency on the time parser API it currently expects.
time = "=0.3.51"
